--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -1,16 +1,21 @@
 {
-  "App": {
-    "SelfUrl": "https://localhost:44374",
-    "RedirectAllowedUrls": "https://localhost:44374"
-  },
+    "App": {
+        "SelfUrl": "https://localhost:44374",
+        "RedirectAllowedUrls": "https://localhost:44374"
+    },
     "ConnectionStrings": {
         "Default": "Server=tcp:dev-dbservers.database.windows.net,1433;Initial Catalog=pikachu_dev2;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     },
-  "AuthServer": {
-    "Authority": "https://localhost:44374",
-    "RequireHttpsMetadata": "false"
-  },
-  "StringEncryption": {
-    "DefaultPassPhrase": "TsMHfRSZ5at6KyMl"
-  }
+    "AuthServer": {
+        "Authority": "https://localhost:44374",
+        "RequireHttpsMetadata": "false"
+    },
+    "StringEncryption": {
+        "DefaultPassPhrase": "TsMHfRSZ5at6KyMl"
+    },
+    "MyAppCertificate": {
+        "X590": {
+            "PassWord": "Koo2915co"
+        }
+    }
 }
