--- a/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
+++ b/src/Kooco.Pikachu.Domain.Shared/Kooco.Pikachu.Domain.Shared.csproj
@@ -29,4 +29,10 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Items\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Items\" />
+  </ItemGroup>
 </Project>
