--- a/src/Kooco.Pikachu.Domain/Kooco.Pikachu.Domain.csproj
+++ b/src/Kooco.Pikachu.Domain/Kooco.Pikachu.Domain.csproj
@@ -25,4 +25,27 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="7.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Tenents\" />
+    <None Remove="Groupbuys\" />
+    <None Remove="Orders\" />
+    <None Remove="Transactions\" />
+    <None Remove="Invoices\" />
+    <None Remove="GroupItems\" />
+    <None Remove="SetItems\" />
+    <None Remove="Warehouses\" />
+    <None Remove="PurchaseOrders\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tenents\" />
+    <Folder Include="Groupbuys\" />
+    <Folder Include="Orders\" />
+    <Folder Include="Transactions\" />
+    <Folder Include="Invoices\" />
+    <Folder Include="Invoices\" />
+    <Folder Include="GroupItems\" />
+    <Folder Include="SetItems\" />
+    <Folder Include="Warehouses\" />
+    <Folder Include="PurchaseOrders\" />
+  </ItemGroup>
 </Project>
