--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -19,6 +19,7 @@
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.2.0" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.2.0" />
     <PackageReference Include="Blazorise.RichTextEdit" Version="1.2.5" />
+    <PackageReference Include="Lsw.Abp.AntDesignUI" Version="0.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
 		
       <PrivateAssets>all</PrivateAssets>
@@ -59,6 +60,17 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Remove="Pages\ItemManagement\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\libs\Blazorise\css\material-plugins.css.map" />
+    <None Include="wwwroot\libs\Blazorise\css\material-plugins.min.css.map" />
+    <None Include="wwwroot\libs\Blazorise\css\material.css.map" />
+    <None Include="wwwroot\libs\Blazorise\css\material.min.css.map" />
+    <None Include="wwwroot\libs\Blazorise\js\material.js" />
+    <None Include="wwwroot\libs\Blazorise\js\material.js.map" />
+    <None Include="wwwroot\libs\Blazorise\js\material.min.js" />
+    <None Include="wwwroot\libs\Blazorise\js\material.min.js.map" />
   </ItemGroup>
 
   <ItemGroup>
