--- a/src/Kooco.Pikachu.Blazor/package.json
+++ b/src/Kooco.Pikachu.Blazor/package.json
@@ -3,7 +3,10 @@
   "name": "my-app",
   "private": true,
   "dependencies": {
-    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~2.2.0-rc.1",
-    "@abp/aspnetcore.components.server.leptonxlitetheme": "~2.2.0-rc.1"
+    "@abp/aspnetcore.components.server.leptonxlitetheme": "~2.3.2",
+    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~2.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0"
   }
 }
