--- a/test/Kooco.Pikachu.EntityFrameworkCore.Tests/Kooco.Pikachu.EntityFrameworkCore.Tests.csproj
+++ b/test/Kooco.Pikachu.EntityFrameworkCore.Tests/Kooco.Pikachu.EntityFrameworkCore.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -11,11 +11,12 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Kooco.Pikachu.EntityFrameworkCore\Kooco.Pikachu.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Kooco.Pikachu.TestBase\Kooco.Pikachu.TestBase.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.3.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
   </ItemGroup>
 
 </Project>
