--- a/test/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp.csproj
+++ b/test/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -20,14 +20,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.3.2" />
     <ProjectReference Include="..\..\src\Kooco.Pikachu.HttpApi.Client\Kooco.Pikachu.HttpApi.Client.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.10" />
   </ItemGroup>
 
 </Project>
