--- a/src/Kooco.Pikachu.EntityFrameworkCore/Kooco.Pikachu.EntityFrameworkCore.csproj
+++ b/src/Kooco.Pikachu.EntityFrameworkCore/Kooco.Pikachu.EntityFrameworkCore.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.OpenIddict.EntityFrameworkCore" Version="7.3.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
   </ItemGroup>
 
   <ItemGroup>
