--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Lsw.Abp.PermissionManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
       <PackageReference Include="Lsw.Abp.SettingManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
       <PackageReference Include="Lsw.Abp.TenantManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.10" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.3.2" />
