--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -17,12 +17,6 @@
 
       <PackageReference Include="Blazored.TextEditor" Version="1.1.0" />
 
-      <PackageReference Include="Lsw.Abp.AspnetCore.Components.Server.AntDesignTheme" Version="0.8.0" />
-      <PackageReference Include="Lsw.Abp.FeatureManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
-      <PackageReference Include="Lsw.Abp.IdentityManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
-      <PackageReference Include="Lsw.Abp.PermissionManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
-      <PackageReference Include="Lsw.Abp.SettingManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
-      <PackageReference Include="Lsw.Abp.TenantManagement.Blazor.Server.AntDesignUI" Version="0.8.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,6 +26,16 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.3.2" />
 
+        <PackageReference Include="Blazorise" Version="1.3.1" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
+        <PackageReference Include="Blazorise.Snackbar" Version="1.3.1" />
+        <PackageReference Include="Blazorise.Components" Version="1.3.1" />
+        <PackageReference Include="Blazorise.Bootstrap5" Version="1.3.1" />
+        <PackageReference Include="Blazorise.DataGrid" Version="1.3.1" />
+        <PackageReference Include="Blazorise.RichTextEdit" Version="1.3.1" />
+        <PackageReference Include="Blazorise.AntDesign" Version="1.3.1" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="2.3.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
