implemented domain logic and repositories

--- a/src/Kooco.Pikachu.EntityFrameworkCore/Kooco.Pikachu.EntityFrameworkCore.csproj
+++ b/src/Kooco.Pikachu.EntityFrameworkCore/Kooco.Pikachu.EntityFrameworkCore.csproj
@@ -8,6 +8,14 @@
     <RootNamespace>Kooco.Pikachu</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>$(NoWarn);CS1591;CS8603;</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>$(NoWarn);CS1591;CS8603;</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Kooco.Pikachu.Domain\Kooco.Pikachu.Domain.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.3.2" />
