--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -14,11 +14,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;CS8603;</NoWarn>
+    <NoWarn>1701;1702;CS8603;CS8602;CS8604;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;CS8603;</NoWarn>
+    <NoWarn>1701;1702;CS8603;CS8602;CS8604;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
