--- a/src/Kooco.Pikachu.Domain/Kooco.Pikachu.Domain.csproj
+++ b/src/Kooco.Pikachu.Domain/Kooco.Pikachu.Domain.csproj
@@ -45,6 +45,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.BlobStoring.Azure" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.Emailing" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.3.2" />
