default payment gateway fix

--- a/src/Kooco.Pikachu.EntityFrameworkCore/Kooco.Pikachu.EntityFrameworkCore.csproj
+++ b/src/Kooco.Pikachu.EntityFrameworkCore/Kooco.Pikachu.EntityFrameworkCore.csproj
@@ -9,11 +9,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>$(NoWarn);CS1591;CS8603;</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;CS8603;CS8604;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>$(NoWarn);CS1591;CS8603;</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;CS8603;CS8604;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
