--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -2,7 +2,7 @@
   "App": {
     "SelfUrl": "https://localhost:44374",
     "RedirectAllowedUrls": "https://localhost:44374",
-    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net"
+    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://koocopikachustore.azurewebsites.net"
   },
   "ConnectionStrings": {
     "Default": "Server=tcp:dev-dbservers.database.windows.net,1433;Initial Catalog=pikachu_dev2;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
