--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -25,6 +25,8 @@
 
       <PackageReference Include="Blazored.TextEditor" Version="1.1.0" />
 
+      <PackageReference Include="Blazorise.LoadingIndicator" Version="1.3.1" />
+
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
