--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -27,6 +27,6 @@
   "EcPay": {
     "HashKey": "5294y06JbISpM5x9",
     "HashIV": "v77hoKGq4kWxNNIS",
-    "MerchantID": "2000132",
+    "MerchantID": "2000132"
   }
 }
