--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -1,14 +1,14 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44374",
-    "RedirectAllowedUrls": "https://localhost:44374",
+    "SelfUrl": "https://pikachu-production.azurewebsites.net:44374",
+    "RedirectAllowedUrls": "https://pikachu-production.azurewebsites.net:44374",
     "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://koocopikachustore.azurewebsites.net, https://*.ecpay.com.tw"
   },
   "ConnectionStrings": {
     "Default": "Server=tcp:dev-dbservers.database.windows.net,1433;Initial Catalog=pikachu_dev2;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44374",
+    "Authority": "https://pikachu-production.azurewebsites.net:44374",
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
