--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -1,9 +1,9 @@
 {
 
   "App": {
-    "SelfUrl": "https://admin.goodpoint.tw:44374",
+    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://www.goodpoint.tw,https://pikachu-store-production.azurewebsites.net, https://*.ecpay.com.tw",
     "RedirectAllowedUrls": "https://admin.goodpoint.tw:44374",
-    "CorsOrigins": "https://localhost:44396, https://pikachu-store-dev.azurewebsites.net, https://www.goodpoint.tw,https://pikachu-store-production.azurewebsites.net, https://*.ecpay.com.tw"
+    "SelfUrl": "https://admin.goodpoint.tw:44374"
   },
 
   "ConnectionStrings": {
