--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -27,6 +27,10 @@
 
       <PackageReference Include="Blazorise.LoadingIndicator" Version="1.3.1" />
 
+      <PackageReference Include="Hangfire.Core" Version="1.8.6" />
+
+      <PackageReference Include="Hangfire.SqlServer" Version="1.8.6" />
+
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
         <PrivateAssets>all</PrivateAssets>
         <!-- <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets> -->
@@ -46,6 +50,8 @@
         <PackageReference Include="Blazorise.AntDesign" Version="1.3.1" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="2.3.2" />
         <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme" Version="2.3.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="7.3.0" />
+        <PackageReference Include="Volo.Abp.HangFire" Version="7.3.0" />
   </ItemGroup>
 
   <ItemGroup>
