--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,8 +75,8 @@ jobs:
   # - script: dotnet test "${{ variables.WORKING_DIRECTORY }}" --no-build
   #   displayName: 'Test'
   - script: |
+      dotnet tool install --global dotnet-ef
       cd src/Kooco.Pikachu.EntityFrameworkCore
-      ls 
       update-database
     displayName: 'Run EF Core Migrations'
   - script: dotnet publish "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-build --output "${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}"
