--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,125 +1,58 @@
 
-# name: Build and Deploy .NET Core Application to Azure Web App - pikachu-dev
-
-# variables:
-#   - name: AZURE_WEBAPP_NAME
-#     value: pikachu-dev
-#   - name: AZURE_WEBAPP_PACKAGE_PATH
-#     value: 'src\Kooco.Pikachu.Blazor\published'
-#   - name: CONFIGURATION
-#     value: Release
-#   - name: DOTNET_CORE_VERSION
-#     value: '7.0.x'
-#   - name: WORKING_DIRECTORY
-#     value: 'src\Kooco.Pikachu.Blazor'
-
-# jobs:
-# - job: build
-#   pool:
-#     vmImage: 'windows-latest'
-#   steps:
-#   - checkout: self
-#   - task: UseDotNet@2
-#     inputs:
-#       version: ${{ variables.DOTNET_CORE_VERSION }}
-#   - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
-#     displayName: 'Restore'
-#   - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore
-#     displayName: 'Build'
-#   - script: dotnet test "${{ variables.WORKING_DIRECTORY }}" --no-build
-#     displayName: 'Test'
-#   - script: |
-#       dotnet tool install --global dotnet-ef
-#       cd src/Kooco.Pikachu.EntityFrameworkCore
-#       dotnet ef database update
-#     displayName: 'Run EF Core Migrations'
-#   - script: dotnet publish "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-build --output "${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}"
-#     displayName: 'Publish'
-#   - task: PublishBuildArtifacts@1
-#     inputs:
-#       pathtoPublish: '${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}'
-#       artifactName: 'webapp'
-
-# - job: deploy
-#   pool:
-#     vmImage: 'windows-latest'
-#   dependsOn: build
-#   steps:
-#   - download: current
-#     artifact: 'webapp'
-#   - task: AzureWebApp@1
-#     inputs:
-#       azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
-#       appType: 'webApp'
-#       appName: ${{ variables.AZURE_WEBAPP_NAME }}
-#       package: $(Pipeline.Workspace)/webapp
-    
-  
-
 name: Build and Deploy .NET Core Application to Azure Web App - pikachu-dev
 
-stages:
-- stage: Build
-  jobs:
-  - job: build
-    pool:
-      vmImage: 'windows-latest'
-    steps:
-    - checkout: self
-    - task: UseDotNet@2
-      inputs:
-        version: ${{ variables.DOTNET_CORE_VERSION }}
-    - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
-      displayName: 'Restore'
-    - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore
-      displayName: 'Build'
-    - script: dotnet test "${{ variables.WORKING_DIRECTORY }}" --no-build
-      displayName: 'Test'
-    - script: |
-        dotnet tool install --global dotnet-ef
-        cd src/Kooco.Pikachu.EntityFrameworkCore
-        dotnet ef database update
-      displayName: 'Run EF Core Migrations'
-    - script: dotnet publish "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-build --output "${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}"
-      displayName: 'Publish'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        pathtoPublish: '${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}'
-        artifactName: 'webapp'
+variables:
+  - name: AZURE_WEBAPP_NAME
+    value: pikachu-dev
+  - name: AZURE_WEBAPP_PACKAGE_PATH
+    value: 'src\Kooco.Pikachu.Blazor\published'
+  - name: CONFIGURATION
+    value: Release
+  - name: DOTNET_CORE_VERSION
+    value: '7.0.x'
+  - name: WORKING_DIRECTORY
+    value: 'src\Kooco.Pikachu.Blazor'
 
-- stage: Dev
-  jobs:
-  - job: DeployDev
-    pool:
-      vmImage: 'windows-latest'
-    condition: and(succeeded('Build'), eq(variables['Build.SourceBranch'], 'refs/heads/devdevdevdde'))
-    steps:
-    - download: current
-      artifact: 'webapp'
-    - task: AzureWebApp@1
-      inputs:
-        azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
-        appType: 'webApp'
-        appName: ${{ variables.AZURE_WEBAPP_NAME }}
-        package: $(Pipeline.Workspace)/webapp
+jobs:
+- job: build
+  pool:
+    vmImage: 'windows-latest'
+  steps:
+  - checkout: self
+  - task: UseDotNet@2
+    inputs:
+      version: ${{ variables.DOTNET_CORE_VERSION }}
+  - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
+    displayName: 'Restore'
+  - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore
+    displayName: 'Build'
+  - script: dotnet test "${{ variables.WORKING_DIRECTORY }}" --no-build
+    displayName: 'Test'
+  - script: |
+      dotnet tool install --global dotnet-ef
+      cd src/Kooco.Pikachu.EntityFrameworkCore
+      dotnet ef database update
+    displayName: 'Run EF Core Migrations'
+  - script: dotnet publish "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-build --output "${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}"
+    displayName: 'Publish'
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}'
+      artifactName: 'webapp'
 
-- stage: Produ
-  jobs:
-  - job: DeployProduction
-    pool:
-      vmImage: 'windows-latest'
-    #dependsOn: Dev
-    condition: and(succeeded('Dev'), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
-    steps:
-    - download: current
-      artifact: 'webapp'
-    - task: AzureWebApp@1
-      inputs:
-        azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
-        appType: 'webApp'
-        appName: ${{ variables.AZURE_WEBAPP_NAME }}
-        package: $(Pipeline.Workspace)/weba
-    - script: write-host "this is prod"
-      displayName: 'Publish'
-
-
+- job: deploy
+  pool:
+    vmImage: 'windows-latest'
+  dependsOn: build
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/azure-pipelines-test-pipeline'))
+  steps:
+  - download: current
+    artifact: 'webapp'
+  - task: AzureWebApp@1
+    inputs:
+      azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
+      appType: 'webApp'
+      appName: ${{ variables.AZURE_WEBAPP_NAME }}
+      package: $(Pipeline.Workspace)/webapp
+    
+  
