--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,4 @@
-
-name: Build and Deploy .NET Core Application to Azure Web App - pikachu-dev
+name: Build and Deploy .NET Core Application to Azure Web App - pikachu-dev and pikachu-production
 
 trigger:
 - dev
