Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,14 @@ jobs:
   - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
     displayName: 'Restore'
 
-  - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore
-    displayName: 'Build'
+  #- script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore
+    #displayName: 'Build'
+  - task: MSBuild@1
+    inputs:
+      solution: "${{ variables.WORKING_DIRECTORY }}"
+      msbuildArchitecture: 'x64'
+      msbuildVersion: 'latest' 
+
 
   - script: dotnet test "${{ variables.WORKING_DIRECTORY }}" --no-build
     displayName: 'Test'
