Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,10 @@ variables:
 
 jobs:
 - job: build
-  #pool:
-    #name: KOOCO Build Agent
   pool:
-    vmImage: 'windows-latest'
+    name: KOOCO Build Agent
+  #pool:
+    #vmImage: 'windows-latest'
   steps:
   - checkout: self
   - task: UseDotNet@2
