--- a/src/Kooco.Pikachu.DbMigrator/appsettings.json
+++ b/src/Kooco.Pikachu.DbMigrator/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=tcp:dev-dbservers.database.windows.net,1433;Initial Catalog=pikachu_dev2;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Default": "Server=tcp:pikachu-prod-db-server.database.windows.net,1433;Initial Catalog=pikachu_prod_db;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"Default": "Server=tcp:dev-dbservers.database.windows.net,1433;Initial Catalog=pikachu_dev2;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"Default": "Server=tcp:pikachu-prod-db-server.database.windows.net,1433;Initial Catalog=pikachu_prod_db;Persist Security Info=False;User ID=kooco_admin;Password=Koo2915co;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "OpenIddict": {
