Commit for 89 and 166

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -30,6 +30,8 @@
   "EcPay": {
     "HashKey": "5294y06JbISpM5x9",
     "HashIV": "v77hoKGq4kWxNNIS",
-    "MerchantID": "2000132"
+    "MerchantID": "2000132",
+    "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
+    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create"
   }
 }
