--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -31,7 +31,9 @@
     "HashIV": "v77hoKGq4kWxNNIS",
     "MerchantID": "2000132",
     "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
-    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create"
+    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
+    "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
+    "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid"
   }
   
 }
