--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -38,6 +38,7 @@
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
     "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
     "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Allowance",
-    "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid"
+    "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid",
+    "TestLabelApi": "https://logistics-stage.ecpay.com.tw/Express/CreateTestData"
   }
 }
